--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:server" : "nodemon server.js"
+    "start:server": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +27,8 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
+    "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1",
     "rxjs": "~6.4.0",
     "socket.io": "^2.2.0",
